# mt7688-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  build-ipk.sh  build.sh  deploy.sh  help.txt  preview-config.html  preview-network.html  require.md
.cargo/: config.toml
demo-webui/: channel.html  index.html  others.html  system.html  uart.html
devicetree/: linkit.dtb  linkit.dts
ugate/: Cargo.toml  build.rs
ugate/frontend/: index-template.html
ugate/frontend/css/: style.css
ugate/frontend/js/: 01-core.js  02-components.js  03-page-status.js  04-page-channels.js  05-page-uart.js  06-page-network.js  07-page-routing.js  08-page-toolbox.js  09-page-system.js  10-app.js
ugate/frontend/modals/: help-data-wrap-format.html  modals-loader.js
ugate/src/: commands.rs  config.rs  embedded_index.html  gpio.rs  index-template.html  main.rs  time_sync.rs  uci.rs
ugate/src/assets/: preview-mock.js
ugate/src/channels/: buffer.rs  http_pub.rs  mod.rs  mqtt.rs  reconnect.rs  tcp.rs
ugate/src/js/: 01-core.js  02-helpers.js  03-page-status.js  04-page-config.js  05-page-uart.js  06-page-network.js  07-page-routing.js  08-page-toolbox.js  09-page-system.js  10-ws.js
ugate/src/modals/: modals-loader.js
ugate/src/uart/: reader.rs  writer.rs
ugate/src/web/: auth.rs  maintenance.rs  mod.rs  netcfg.rs  server.rs  status.rs  syslog.rs  toolbox.rs  wifi.rs  ws.rs
ugate/src/web_api/: maintenance.rs  netcfg.rs  server.rs  syslog.rs  toolbox.rs  wifi.rs  ws.rs
vgateway/: Cargo.toml
vgateway/src/: http_publisher.rs  network_config.rs  uart_reader.rs  uci.rs
(+83 files in other folders)
