[package]
name = "v3s-system-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
libc = "0.2"
ureq = "2"
rumqttc = "0.24"
rustls = "0.22"
webpki-roots = "0.26"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
